--- a/app/views/cats_controller/new.html.erb
+++ b/app/views/cats_controller/new.html.erb
@@ -1,4 +1,4 @@
-<form action="/cats" method="POST">
+<form action="/cats/create" method="POST">
   <label>Name
     <input type="text" name="cat[name]" value="">
   </label>
